--- a/packages/create-account/editAccount.html
+++ b/packages/create-account/editAccount.html
@@ -16,6 +16,9 @@
             <div class="mdl-card__actions mdl-card--border">
                 <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Save account</button>
             </div>
+            <div style="color: #d9006e">
+                {{error}}
+            </div>
         </form>
     </div>
 </template>
