Rename accountTokent => toolToken, start implementing API

--- a/packages/buildboard-account/client/tools/tool-item.html
+++ b/packages/buildboard-account/client/tools/tool-item.html
@@ -5,7 +5,7 @@
                 <div>
                     Tool: <a class="js-edit">{{currentValue.id}}</a>
                     <input type="hidden" class="js-tool" name="id" value="{{currentValue.id}}">
-                    <input type="hidden" class="js-setting" name="accountToken" value="{{currentValue.accountToken}}">
+                    <input type="hidden" class="js-setting" name="toolToken" value="{{currentValue.toolToken}}">
                 </div>
             {{else}}
                 <label for="{{type}}">Choose tool</label>
