Add owners filed for account

--- a/packages/buildboard-account/client/tools/tool-item.html
+++ b/packages/buildboard-account/client/tools/tool-item.html
@@ -6,7 +6,7 @@
                     Tool:{{currentValue.name}} <a class="js-edit">edit</a>
                     <input type="hidden" class="js-tool js-tool-field" name="id" value="{{currentValue.id}}">
                     <input type="hidden" class="js-tool-field" name="name" value="{{currentValue.name}}">
-                    <input type="hidden" class="js-setting" name="toolToken" value="{{currentValue.toolToken}}">
+                    <input type="hidden" class="js-tool-field" name="toolToken" value="{{currentValue.toolToken}}">
                 </div>
             {{else}}
                 <label for="{{type}}">Choose tool</label>
