--- a/packages/buildboard-account/client/account-item.html
+++ b/packages/buildboard-account/client/account-item.html
@@ -1,3 +1,5 @@
 <template name="accountItem">
-    <li class="mdl-menu__item">{{id}}</li>
+    <li class="mdl-menu__item">
+        <a href="/{{id}}">{{id}}</a> {{#if isOwner}} &nbsp; <a href="/{{id}}/edit">edit</a>{{/if}}
+    </li>
 </template>
