--- a/client/items/itemList.html
+++ b/client/items/itemList.html
@@ -2,9 +2,9 @@
     <table class="mdl-data-table mdl-js-data-table">
         <thead>
         <tr>
-            <th class="mdl-data-table__cell--non-numeric">Branch name</th>
-            <th class="mdl-data-table__cell--non-numeric">Task id</th>
-            <th class="mdl-data-table__cell--non-numeric">Task name</th>
+            <th class="mdl-data-table__cell--non-numeric">Task</th>
+            <th class="mdl-data-table__cell--non-numeric">Branch</th>
+            <th class="mdl-data-table__cell--non-numeric">Pull request</th>
         </tr>
         </thead>
         <tbody>
