--- a/client/items/itemList.html
+++ b/client/items/itemList.html
@@ -3,8 +3,10 @@
         <thead>
         <tr>
             <th class="mdl-data-table__cell--non-numeric">Task</th>
+            <th class="mdl-data-table__cell--non-numeric">State</th>
             <th class="mdl-data-table__cell--non-numeric">Branch</th>
             <th class="mdl-data-table__cell--non-numeric">Pull request</th>
+            <th class="mdl-data-table__cell--non-numeric">Last build</th>
         </tr>
         </thead>
         <tbody>
