--- a/client/items/itemItem.html
+++ b/client/items/itemItem.html
@@ -16,14 +16,14 @@
         </td>
 
         <td class="mdl-data-table__cell--non-numeric">
-            <a href="{{pullRequest item 'url'}}">
-                {{pullRequest item 'id'}}
+            <a href="{{first item.pullRequests 'url'}}">
+                {{first item.pullRequests 'id'}}
             </a>
         </td>
 
         <td class="mdl-data-table__cell--non-numeric">
-            <a href="{{lastBuild item 'url'}}">
-                {{lastBuild item 'status'}}
+            <a href="{{first item.builds 'url'}}">
+                {{first item.builds 'status'}}
             </a>
         </td>
     </tr>
