US#23 Display jobs

--- a/client/itemView/itemView.html
+++ b/client/itemView/itemView.html
@@ -1,23 +1,11 @@
 <template name="itemView">
-    <div>
-        {{#each tasks}}
-            {{> itemViewTask task=this}}
-        {{/each}}
-        {{#each branches}}
-            {{> itemViewBranch branch=this}}
-        {{/each}}
-    </div>
-    <div>
-        {{#each pullRequests}}
-            {{> itemViewPullRequest pullRequest=this}}
-        {{/each}}
-    </div>
-    <div>
-        {{#each builds}}
-            {{> itemViewBuild build=this}}
-        {{/each}}
-    </div>
-    <!--<pre>-->
-    <!--<code>{{print this}}</code>-->
-    <!--</pre>-->
+    {{#if tasks}}
+        {{> itemViewTasks tasks=tasks}}
+    {{/if}}
+    {{#if branches }}
+        {{> itemViewBranches branches=branches}}
+    {{/if}}
+    {{#if builds}}
+        {{> itemViewBuilds builds=builds}}
+    {{/if}}
 </template>
