--- a/client/itemView/itemViewPullRequest.html
+++ b/client/itemView/itemViewPullRequest.html
@@ -1,7 +1,3 @@
 <template name="itemViewPullRequest">
-    <div>
-        <a href="{{pullRequest.url}}">
-            {{pullRequest.id}}
-        </a>
-    </div>
+    <a href="{{pullRequest.url}}">{{pullRequest.id}}</a> {{pullRequest.name}}
 </template>
