--- a/client/items/itemItem.html
+++ b/client/items/itemItem.html
@@ -16,8 +16,8 @@
         </td>
 
         <td class="mdl-data-table__cell--non-numeric">
-            <a href="{{first item.pullRequests 'url'}}">
-                {{first item.pullRequests 'id'}}
+            <a href="{{pullRequest item 'url'}}">
+                {{pullRequest item 'id'}}
             </a>
         </td>
 
